--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -29,6 +29,19 @@
       <%= f.date_field :date, class: 'form-control' %>
     </div>
   </div>
+  <div class="form-group">
+    <%= f.label :aanwezigen, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%#= collection_select(:meeting, :attendee_ids, User.all, :id, :name, {selected: @meeting.attendee_ids}, {multiple: true}) %>
+      <%= f.select :user_ids, User.all.collect { |x| [x.name, x.id] }, {}, multiple: true %>
+      <%#= form_for @remark, :url => salveaza_responsabili_remark_path(@remark) do |f| %>
+        <%# @users.each do |user| %>
+          <%#= check_box_tag 'user_ids[]', user.id, @remark.users.include?(user) %>
+          <%#= user.name %>
+        <%# end %>
+      <%# end %>
+    </div>
+  </div>
   <div class="actions">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit :Verstuur, class: 'btn btn-primary' %>
