--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -32,7 +32,7 @@
   <div class="form-group">
     <%= f.label :aanwezigen, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.select :user_ids, User.all.collect { |x| [x.name, x.id] }, {}, multiple: true %>
+      <%= f.select :user_ids, User.intern.collect { |x| [x.name, x.id] }, {}, multiple: true %>
     </div>
   </div>
   <div class="actions">
