Some stylesheet fixes

--- a/app/assets/stylesheets/meetings.css.scss
+++ b/app/assets/stylesheets/meetings.css.scss
@@ -5,3 +5,13 @@
 #meeting-form .actions input {
   width: auto;
 }
+
+#meeting-form {
+  #meeting_agenda {
+    min-height: 250px;
+  }
+  #meeting_user_ids {
+    min-height: 200px;
+    min-width: 30%;
+  }
+}
