A lot of view improvements (also fix /mystickers 500 error)

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,11 +8,11 @@
 
     <div class="input-group">
       <span class="input-group-addon"><i class="fas fa-envelope"></i></span>
-      <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "email" %>
+      <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "E-mail adres" %>
     </div>
     &nbsp;
     <div class="actions">
-      <%= f.submit "Stuur reset instructies", class: "btn btn-large btn-danger" %>
+      <%= f.submit "Verstuur reset instructies", class: "btn btn-large btn-primary" %>
     </div>
     <%= render "devise/shared/links" %>
   <% end %>
