--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,20 +1,6 @@
 <div class="text-center">
-  <%- false && if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Sign up", new_registration_path(resource_name), class: 'btn btn-sm btn-secondary' %>
-  <% end -%>
-
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to "Forgot your password?", new_password_path(resource_name), class: 'btn btn-sm btn-secondary' %>
-  <% end -%>
-
-  <%- if false && devise_mapping.confirmable? && controller_name != 'confirmations' %>
-    <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name), class: 'btn btn-sm btn-secondary' %>
-    <br/>
-  <% end -%>
-
-  <%- if false && devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-    <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: 'btn btn-sm btn-secondary' %>
-    <br/>
+    <%= link_to "Wachtwoord vergeten", new_password_path(resource_name), class: 'btn btn-sm btn-default' %>
   <% end -%>
 
   <%- if devise_mapping.omniauthable? %>
