--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
     <nav>
       <ul>
         <li><%= link_to 'Inloggen', signin_path %></li>
-        <li><%= link_to 'Registreren', invited_path %></li>
+        <li><%= link_to 'Registreren', activate_account_path %></li>
       </ul>
     </nav>
   <% end %>
