--- a/app/views/stickers/_form.html.erb
+++ b/app/views/stickers/_form.html.erb
@@ -1,29 +1,27 @@
 <%= form_for @sticker do |f| %>
   <div class="form-group">
-    <%= f.label :lat %>
+    <%= f.label :latitude %>
     <%= f.text_field :lat, id: 'lat', class: 'form-control', pattern: '-?\d*\.\d*', required: true %>
     <%= @sticker.errors.full_messages_for(:lat).first[3..] if @sticker.errors[:lat].any? %>
   </div>
   <div class="form-group">
-    <%= f.label :lon %>
+    <%= f.label :longitude %>
     <%= f.text_field :lon, id: 'lon', class: 'form-control', pattern: '-?\d*\.\d*', required: true %>
-    <%= @sticker.errors.full_messages_for(:lon).first[3..] if @sticker.errors[:lon].any?  %>
+    <%= @sticker.errors.full_messages_for(:lon).first[3..] if @sticker.errors[:lon].any? %>
   </div>
   <div class="form-group">
     <%= f.label :notes %>
     <%= f.text_area :notes, class: 'form-control' %>
   </div>
   <div class="actions">
-    <%= f.submit :Verstuur, class: 'btn btn-primary' %>
+    <div class="btn-group">
+      <%= f.submit :Verstuur, class: 'btn btn-primary' %>
+      <button class="btn btn-default" onclick="getLocation()">Get location</button>
+    </div>
   </div>
 <% end %>
 
-<button onclick="getLocation()">Get location</button>
-
 <script type="application/javascript">
-    let lat = document.getElementById("lat");
-    let lon = document.getElementById("lon");
-
     function getLocation() {
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(showPosition);
@@ -33,7 +31,7 @@
     }
 
     function showPosition(position) {
-        lat.value = position.coords.latitude;
-        lon.value = position.coords.longitude;
+        document.getElementById("lat").value = position.coords.latitude;
+        document.getElementById("lon").value = position.coords.longitude;
     }
 </script>
