--- a/app/views/stickers/personal.html.erb
+++ b/app/views/stickers/personal.html.erb
@@ -1,40 +1,48 @@
 <script type="text/javascript">
-$(document).ready(function () {
-  $("#sticker").tablesorter();
-}
-);
+    $(document).ready(function () {
+            $("#sticker").tablesorter();
+        }
+    );
 </script>
 <table id="sticker" class="tablesorter table table-hover">
   <thead>
-    <tr>
-      <th>Datum</th>
-      <th>Locatie</th>
-      <th>Admin stuff</th>
-    </tr>
+  <tr>
+    <th>Datum</th>
+    <th>Coördinaten</th>
+    <th>Adres</th>
+    <th>Admin stuff</th>
+  </tr>
   </thead>
   <%= will_paginate %>
   <tbody>
-    <% @stickers.each do |m| %>
-      <tr>
-        <td><%= m.created_at.strftime('%d-%m-%Y %H:%M') %></td>
-        <td><%= "#{m.lat}, #{m.lon}" %><br>
-          <% jdata = Net::HTTP.get_response(URI.parse("https://maps.googleapis.com/maps/api/geocode/json?latlng=#{m.lat},#{m.lon}&key=AIzaSyAz0ENeS5X1Vh9A_-KxxENHBf-qQYB2z-U")) %>
-          <% mdata = JSON.parse(jdata.body) %>
+  <% @stickers.each do |m| %>
+    <tr>
+      <td><%= m.created_at.strftime('%d-%m-%Y %H:%M') %></td>
+      <td>
+        <%= "#{m.lat}, #{m.lon}" %>
+      </td>
+      <td>
+        <% jdata = Net::HTTP.get_response(URI.parse("https://maps.googleapis.com/maps/api/geocode/json?latlng=#{m.lat},#{m.lon}&key=AIzaSyAz0ENeS5X1Vh9A_-KxxENHBf-qQYB2z-U")) %>
+        <% mdata = JSON.parse(jdata.body) %>
+        <% if mdata["results"] && mdata["results"][0] && mdata["results"][0]["formatted_address"] %>
           <%= mdata["results"][0]["formatted_address"] %>
-        </td>
+        <% else %>
+          Adres niet beschikbaar. Waarschijnlijk zijn de coordinaten malformed.
+        <% end %>
+      </td>
 
-        <td>
-          <div class="btn-group">
-            <%= link_to edit_sticker_path(m), class: 'btn btn-info' do %>
-              <i class="fas fa-pencil-alt"></i>
-            <% end %>
-            <%= link_to m, class: 'btn btn-danger', method: :delete, data: {confirm: 'Weet je het zeker?'} do %>
-              <i class="far fa-trash-alt"></i>
-            <% end %>
-          </div>
-        </td>
-      </tr>
-    <% end %>
+      <td>
+        <div class="btn-group btn-group-vertical">
+          <%= link_to edit_sticker_path(m), class: 'btn btn-default btn-sm' do %>
+            <i class="fas fa-pencil-alt"></i> Wijzig sticker
+          <% end %>
+          <%= link_to m, class: 'btn btn-default btn-sm', method: :delete, data: {confirm: 'Weet je het zeker?'} do %>
+            <i class="far fa-trash-alt"></i> Verwijder sticker
+          <% end %>
+        </div>
+      </td>
+    </tr>
+  <% end %>
   </tbody>
 </table>
 <%= will_paginate %>
