Add link to finances in header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,6 +32,8 @@
                 <li><%= link_to news_index_path do %><i class="far fa-newspaper fa-fw"></i> Nieuws<% end %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to recipe_index_path do %><i class="fas fa-book fa-fw"></i> Recepten<% end %></li>
+                <li><a target="_blank" href="https://moneybird.com/275570381306201797">
+                  <i class="fa fa-coins fa-fw"></i> Financiën</a></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to stats_path do %><i class="fas fa-chart-line fa-fw"></i> Statistieken<% end %></li>
                 <li><%= link_to trail_path do %><i class="fas fa-history fa-fw"></i> Log<% end %></li>
