--- a/app/views/static_pages/activate_account.html.erb
+++ b/app/views/static_pages/activate_account.html.erb
@@ -1,15 +1,15 @@
 <% content_for :title do %>
-  Uitnodiging
+  Account activeren
 <% end %>
 
 <%= render layout: 'layouts/forms/form_small' do %>
   <%= form_for "", :url => "users/invitation/accept", :html => {:method => :get} do |f| %>
     <div class="input-group">
-      <span class="input-group-addon"><i class="fa fa-user-o"></i></span>
+      <span class="input-group-addon"><i class="fa fa-user"></i></span>
       <%= f.text_field :invitation_token, autofocus: true, class: "form-control", placeholder: "Uitnodigingscode" %>
     </div>
     <br>
-    <%= link_to "Privacy Statement", "/privacy" %>
-    <p><%= f.submit "Registreren", class: "btn btn-large btn-success" %></p>
+    <%= link_to "Privacy Statement", "/privacy", class: 'pull-right align-right' %>
+    <%= f.submit "Registreer", class: "btn btn-large btn-primary" %>
   <% end %>
 <% end %>
