--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
       </h1>
     </section>
 
-    <% unless @user.nicknames.blank? %>
+    <% if @user.nicknames.present? %>
       <section>
         <h4>Bijnamen</h4>
         <ul>
