--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,7 +48,7 @@
 
     <section>
       <h4>Stats</h4>
-      <table id="api-key-table" class="table table-hover table-striped">
+      <table class="table table-hover table-striped">
         <tr>
           <td>Aantal quotes</td>
           <td><%= @user.quotes.count %></td>
