Improve user edit and show views (#82)
* Improve user edit and show views

* Iterate over nicknames

* Use the same width for sidebar as we do on homepage

* Update app/views/users/show.html.erb

Co-authored-by: Jacko Zuidema <jackozi@users.noreply.github.com>

* Update app/assets/stylesheets/users.css.scss

Co-authored-by: Jacko Zuidema <jackozi@users.noreply.github.com>

* General improvements (#83)

* WIP

* A lot of view improvements (also fix /mystickers 500 error)

* Add link to finances in header

* Allow admins to edit profiles (but hide api keys)

* Add get_user method

* Set mailer option in development.rb to be able to mail in development mode

* Update text

* get_user --> user

Co-authored-by: Jacko Zuidema <jackozi@users.noreply.github.com>

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,26 +5,51 @@
   <aside class="col-md-4">
     <section>
       <%= gravatar_for @user, size: 120 %>
-      <a role="button" class="btn btn-default" href="http://gravatar.com/emails" target="_blank">Wijzig</a>
+      <a role="button" class="btn btn-default" href="http://gravatar.com/emails" target="_blank">Wijzig profielfoto</a>
     </section>
-    <% if current_user.admin? %>
-      <section>
-        <%= link_to 'Groepen', usergroups_user_path(@user) %>
-      </section>
-    <% end %>
+
     <section>
-      Api keys:<br/>
-      <% @user.api_keys.each do |ak| %>
-        <%= ak.name %>
-        : <%= link_to ak.key, ak %> <%= link_to ak, method: :delete, data: {confirm: 'Zeker weten?'}, class: 'btn btn-xs' do %>
-          <i class="far fa-trash-alt"></i>
+      <h4>Groepen</h4>
+      <ul>
+        <% @user.usergroups.each do |group| %>
+          <li><%= group.name %></li>
+        <% end %>
+      </ul>
+      <% if current_user.admin? %>
+        <%= link_to usergroups_user_path(@user), class: 'btn btn-default btn-sm' do %>
+          <i class="fa fa-pencil-alt fa-fw"></i> Wijzig groepen
         <% end %>
       <% end %>
-      <%= form_for(ApiKey.new) do |f| %>
-        <div class="form-group">
-          <%= f.text_field :name, placeholder: 'Naam', class: 'form-control' %>
+    </section>
+
+    <section>
+      <% if @user == current_user %>
+        <% if @user.api_keys.any? %>
+          <h4>Api keys</h4>
+          <table id="api-key-table" class="table table-hover">
+            <thead>
+            <tr>
+              <th>Naam</th>
+              <th>Key</th>
+            </tr>
+            </thead>
+            <% @user.api_keys.each do |key| %>
+              <tr>
+                <td><%= key.name %></td>
+                <td>
+                  <%= link_to key.key, key %>
+                  <%= link_to key, method: :delete, data: {confirm: 'Zeker weten?'}, class: 'btn btn-default btn-sm' do %>
+                    <i class="far fa-trash-alt"></i>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </table>
+        <% end %>
+        <%= form_for ApiKey.new, html: {class: 'form-inline'} do |f| %>
+          <%= f.text_field :name, placeholder: 'Sleutelnaam', class: 'form-control' %>
           <%= f.submit 'Toevoegen', class: 'btn btn-default' %>
-        </div>
+        <% end %>
       <% end %>
     </section>
   </aside>
