--- a/app/views/events/_table.html.erb
+++ b/app/views/events/_table.html.erb
@@ -11,9 +11,8 @@
     <tr>
       <td>
         <%= link_to event.title, event %>
-        <% if event.today? %>
-          <span class="label label-primary">Vandaag</span>
-        <% end %>
+        <% if event.today? %><span class="label label-default">Vandaag</span><% end %>
+        <% if event.public? %><span class="label label-default">Publiek</span><% end %>
       </td>
       <td><%= event.date.strftime('%d-%m-%Y') %>
       <td>
