--- a/app/views/stickers/new.html.erb
+++ b/app/views/stickers/new.html.erb
@@ -2,6 +2,6 @@
   Nieuwe sticker
 <% end %>
 
-<%= render layout: 'layouts/forms/form_small' do %>
+<%= render layout: 'layouts/small_width' do %>
   <%= render 'form' %>
 <% end %>
