--- a/app/views/stickers/edit.html.erb
+++ b/app/views/stickers/edit.html.erb
@@ -1,3 +1,3 @@
-<%= render layout: 'layouts/forms/form_small' do %>
+<%= render layout: 'layouts/small_width' do %>
   <%= render 'form' %>
 <% end %>
