Show deadline of event and don't allow plebs signup after deadline

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,6 +35,11 @@
   overflow: auto;
 }
 
+button:disabled {
+    cursor: not-allowed;
+    pointer-events: all !important;
+}
+
 .input-group-btn .btn-group {
   display: flex !important;
 }
