--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -121,7 +121,7 @@
           <%= link_to edit_event_path(@event), class: 'btn btn-default' do %>
             <i class="fas fa-pencil-alt"></i> Wijzig activiteit
           <% end %>
-          <% if @event.deadline > DateTime.now %>
+          <% if @event.open? %>
             <%= link_to reminder_path(@event), class: 'btn btn-default' do %>
               <i class="fa fa-bell"></i> Herinner Hamers
             <% end %>
