Change icon of link button

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -105,7 +105,7 @@
         <div class="btn-group btn-group-vertical">
           <% if @event.public? %>
             <%= link_to @event.invitation_link, class: "btn btn-default", target: "_blank" do %>
-              <i class="fas fa-user-friends"></i> Plebuitnodiglink
+              <i class="fas fa-link"></i> Plebuitnodiglink
             <% end %>
  
           <% end %>
