--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,17 +26,20 @@
                 <li><%= link_to nicknames_path do %><i class="fa fa-address-book fa-fw"></i> Bijnamen<% end %></li>
                 <li><%= link_to users_path do %><i class="fa fa-user fa-fw"></i> Leden<% end %></li>
                 <li><%= link_to stickers_path do %><i class="far fa-sticky-note fa-fw"></i> Stickers<% end %></li>
+                <li><%= link_to recipe_index_path do %><i class="fas fa-book fa-fw"></i> Recepten<% end %></li>
                 <li><%= link_to meetings_path do %><i class="fa fa-suitcase fa-fw"></i> Vergaderingen<% end %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to blogitems_path do %><i class="fa fa-rss fa-fw"></i> Blog<% end %></li>
                 <li><%= link_to news_index_path do %><i class="far fa-newspaper fa-fw"></i> Nieuws<% end %></li>
                 <li role="separator" class="divider"></li>
-                <li><%= link_to recipe_index_path do %><i class="fas fa-book fa-fw"></i> Recepten<% end %></li>
-                <li><a target="_blank" href="https://moneybird.com/275570381306201797">
-                  <i class="fa fa-coins fa-fw"></i> Financiën</a></li>
-                <li role="separator" class="divider"></li>
                 <li><%= link_to stats_path do %><i class="fas fa-chart-line fa-fw"></i> Statistieken<% end %></li>
                 <li><%= link_to trail_path do %><i class="fas fa-history fa-fw"></i> Log<% end %></li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Extern</li>
+                <li><a target="_blank" href="https://github.com/hamers/">
+                  <i class="fab fa-github fa-fw"></i> Git</a></li>
+                <li><a target="_blank" href="https://moneybird.com/275570381306201797">
+                  <i class="fa fa-coins fa-fw"></i> Financiën</a></li>
               </ul>
             </li>
             <% if current_user&.admin? %>
