--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,9 +37,9 @@
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Extern</li>
                 <li><a target="_blank" href="https://github.com/hamers/">
-                  <i class="fab fa-github fa-fw"></i> Git</a></li>
+                  <i class="fab fa-github fa-fw"></i> GitHub</a></li>
                 <li><a target="_blank" href="https://moneybird.com/275570381306201797">
-                  <i class="fa fa-coins fa-fw"></i> Financiën</a></li>
+                  <i class="fa fa-coins fa-fw"></i> Moneybird</a></li>
               </ul>
             </li>
             <% if current_user&.admin? %>
