Change link now that the organisation is renamed

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,7 +36,7 @@
                 <li><%= link_to trail_path do %><i class="fas fa-history fa-fw"></i> Log<% end %></li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Extern</li>
-                <li><a target="_blank" href="https://github.com/hamers/">
+                <li><a target="_blank" href="https://github.com/DispuutHamers/">
                   <i class="fab fa-github fa-fw"></i> GitHub</a></li>
                 <li><a target="_blank" href="https://moneybird.com/275570381306201797">
                   <i class="fa fa-coins fa-fw"></i> Moneybird</a></li>
